# portfolio

./: .envrc  .gitignore  Gemfile  README.md  _config.yml  build.sh  cabal.project  default.nix  flake.nix  frontend-result  gemset.nix  index.html  index.js  other.html  package  package-lock.json  package.json  packages.dhall  portfolio.cabal  prettier.config.cjs  projects.html  result  shell.nix  spago.dhall  tailwind.config.cjs  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js  webpack.test.js
.githooks/: pre-commit
_data/: settings.yml
_includes/: head.html  post-paginator.html
_layouts/: archive.html  home.html  other.html  post.html  projects.html
_posts/: 2015-03-24-mini-java.md  2015-06-20-fifth.md  2015-10-01-pong.md  2017-07-25-vim-highlight.md  2017-07-25-vim-join.md  2018-09-01-bill-gates-honey.md  2018-09-02-bubbles-funny-bones.md  2019-12-01-bananas-buildings-batman.md  2020-01-01-huh-huh-huh.md  2020-03-29-postlude.md  2021-04-01-looped.md  2021-12-08-blog.md  2021-12-28-homesync.html  2022-07-02-anki-synonyms.md  2023-02-05-bookshelf.md  2023-04-09-were-the-crew.md  2023-11-17-bootstrap.md  2023-11-26-boardwise.md  2023-12-10-nixos-configuration.md  2023-12-14-bookshelf-doc.md  2023-12-23-forgejo.md  2023-12-30-joker-card.md  2024-01-10-plausible.md  2024-01-30-notebook.md  2024-01-30-wiki.md
_sass/: _home.scss  _post.scss  social-icons.scss
app/: Main.hs
backend/: backend.cabal  default.nix  hie.yaml  package.yaml
common/: common.cabal  default.nix  hie.yaml  package.yaml
db/: portfolio.db  posts.sql
(+97 files in other folders)
