cabal-version:       2.4

name:                portfolio
version:             0.1.0.0

executable portfolio
  main-is:             Main.hs
  build-depends:         base
                       , mtl
                       , scotty
                       , sqlite-simple
                       , text
                       , time
                       , transformers
                       , wai-middleware-static
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
